# 20260113T171659_fagundescodes_gatekeepyr

./: .dockerignore  .env.example  Dockerfile  Dockerfile.backend  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  service.py  service_breaker.py
.github/workflows/: ci.yml
tests/: test_circuit_breaker.py  test_gateway.py  test_load_balancing.py
