[project]
name = "gatekeepyr"
version = "0.1.0"
description = "You shall not pass!"
readme = "README.md"
requires-python = "==3.11.14"
dependencies = [
    "fastapi[standard]>=0.119.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.1.1",
    "redis>=6.4.0",
    "uvicorn>=0.37.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.2",
  "pytest-asyncio>1.0.0",
]

[build-system]
requires = ["setuptools>=80.1.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "service"]
